@@ -940,7 +940,8 @@ class Conf :
             "ACDischarVA"       : {"value" :370, "length" : 4, "type" : "num", "divide" : 10},  
             "BatDischarWatt"    : {"value" :378, "length" : 4, "type" : "num", "divide" : 10},  
             "BatDischarVA"      : {"value" :386, "length" : 4, "type" : "num", "divide" : 10},  
-            "BatWatt"           : {"value" :394, "length" : 4, "type" : "numx", "divide" : 10}                                                 
+            "BatWatt"           : {"value" :394, "length" : 4, "type" : "numx", "divide" : 10},   
+            "invFanSpeed"       : {"value" :414, "length" : 2, "type" : "num", "divide" : 1}                                              
         } }            
 
         self.recorddict8 = {"T06NNNNSPF": {
@@ -998,7 +999,8 @@ class Conf :
             "ACDischarVA"       : {"value" :450, "length" : 4, "type" : "num", "divide" : 10},  
             "BatDischarWatt"    : {"value" :458, "length" : 4, "type" : "num", "divide" : 10},  
             "BatDischarVA"      : {"value" :466, "length" : 4, "type" : "num", "divide" : 10},  
-            "BatWatt"           : {"value" :474, "length" : 4, "type" : "numx", "divide" : 10}                                                 
+            "BatWatt"           : {"value" :474, "length" : 4, "type" : "numx", "divide" : 10},                                                
+            "invFanSpeed"       : {"value" :494, "length" : 2, "type" : "num", "divide" : 1}
         }}
 
         self.recorddict9 = {"T06NNNNXTL3": {
